# ProcessReader

./: CMakeLists.txt  ProcessReader.cpp  ProcessReader.h  README.md  datareader.cpp  datareader.h  dxrender.cpp  dxrender.h  main.cpp  player_info.cpp  player_info.h  processbinder.cpp  processbinder.h  utils.cpp  utils.h  windowbinder.cpp  windowbinder.h
